fixed vertical overflows for tables with dropdowns and fixed scrollbar styling (#1090)

--- a/app/javascript/packs/stylesheets/custom_table.scss
+++ b/app/javascript/packs/stylesheets/custom_table.scss
@@ -43,11 +43,24 @@
   border: none;
 }
 
+.table-responsive {
+  margin-bottom: 1em;
+
+  table {
+    margin-bottom: 0px;
+  }
+}
+
 // This is how we deal with slight vertical overflow from a dropdown in a table that needs to be horizontal scrollable.
 // See this for the core issue: https://stackoverflow.com/a/6433475
 .table-has-dropdown {
-  padding-top: 120px;
-  margin-top: -120px;
+  padding-top: 80px;
+  margin-top: -80px;
+
+  &-large {
+    padding-top: 105px;
+    margin-top: -105px;
+  }
 }
 
 // REMOVE WHEN CLOSE CONTACT AND LAB TABLES ARE CONVERTED
